compiler/test/parse-err/apply-func-non-scalar-args.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

// expected-note@below{{parameter 0 has type Matrix<s, s, int>}}
func nonScalarFunc(m: Matrix<s, s, int>) -> int {
    return int(0);
}

func ApplyFuncNonScalarArgs(m: Matrix<s, s, int>) -> Matrix<s, s, int> {
    // apply() requires the function to have scalar arguments
    // expected-error@below{{apply() requires function parameters to be scalars}}
    return apply(nonScalarFunc, m);
}
